# Automatic-Diarization

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  diarization.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
tests/: conftest.py  test_segments.py
