[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automatic-diarization"
version = "0.1.0"
description = "Automatic diarization + speaker matching (AssemblyAI + speechbrain)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "assemblyai>=0.36.0",
  "ffmpeg-python>=0.2.0",
  "numpy>=1.26",
  "scipy>=1.11",
  "torch>=2.2",
  "torchaudio>=2.2",
  "speechbrain>=0.5.16",
  "pytest>=8.0",
  "pytest-mock>=3.14",
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","C4","PIE","RET","SIM","TID","PL"]
ignore = ["E501"]
target-version = "py310"

[tool.ruff.lint.isort]
known-first-party = ["automatic-diarization"]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
